--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,82 +4,72 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/white"
+    android:background="@drawable/bg"
     tools:context=".MainActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#FFFFFF"
         android:orientation="vertical">
 
-        <ImageView
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="-60dp"
-            android:adjustViewBounds="true"
-            android:scaleType="fitXY"
-            android:src="@drawable/pixel_google" />
+            android:layout_height="wrap_content">
+
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="-60dp"
+                android:adjustViewBounds="true"
+                android:scaleType="fitXY"
+                android:src="@drawable/pixel_google" />
+
+            <TextView
+                style="@style/TextContent.Small.White"
+                android:layout_gravity="bottom"
+                android:layout_marginStart="@dimen/activity_horizontal_margin"
+                android:layout_marginBottom="@dimen/activity_vertical_margin"
+                android:background="#4D000000"
+                android:drawableStart="@drawable/ic_collections_white_18dp"
+                android:drawablePadding="6dp"
+                android:fontFamily="@font/comfortaa"
+                android:gravity="center_vertical"
+                android:padding="10dp"
+                android:text="@string/dummy_photos"
+                android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                android:textColor="@android:color/white" />
+        </FrameLayout>
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            android:layout_marginStart="@dimen/activity_horizontal_margin"
-            android:layout_marginBottom="@dimen/activity_vertical_margin"
-            android:background="#4D000000"
-            android:drawableStart="@drawable/ic_collections_white_18dp"
-            android:drawablePadding="6dp"
-            android:fontFamily="@font/comfortaa"
-            android:gravity="center_vertical"
-            android:padding="10dp"
-            android:text="@string/dummy_photos"
-            android:textAppearance="@style/TextAppearance.AppCompat.Small"
-            android:textColor="@android:color/white" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/activity_horizontal_margin"
+            style="@style/TextContent.Black"
             android:layout_marginTop="@dimen/activity_vertical_margin"
-            android:layout_marginRight="@dimen/activity_horizontal_margin"
             android:layout_marginBottom="8dp"
-            android:background="#FFFFFF"
             android:fontFamily="@font/allerta"
             android:text="@string/dummy_value"
-            android:textColor="@android:color/holo_red_light"
             android:textSize="32sp" />
 
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/activity_horizontal_margin"
-            android:layout_marginRight="@dimen/activity_horizontal_margin"
+            style="@style/TextContent.Subtitle"
             android:layout_marginBottom="@dimen/activity_vertical_margin"
             android:fontFamily="@font/comfortaa"
             android:text="@string/stock"
             android:textSize="12sp" />
 
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/activity_horizontal_margin"
-            android:layout_marginRight="@dimen/activity_horizontal_margin"
+            style="@style/TextContent"
             android:layout_marginBottom="@dimen/activity_vertical_margin"
             android:fontFamily="@font/comfortaa"
             android:lineSpacingMultiplier="1"
             android:text="@string/content_text"
+            android:textAlignment="viewStart"
             android:textColor="@android:color/black" />
 
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/activity_horizontal_margin"
-            android:layout_marginRight="@dimen/activity_horizontal_margin"
+            style="@style/TextContent.Subtitle"
             android:layout_marginBottom="8dp"
             android:fontFamily="@font/comfortaa"
             android:text="@string/specification"
-            android:textColor="#000000"
             android:textSize="14sp"
             android:textStyle="bold" />
 
@@ -89,7 +79,7 @@
             android:layout_marginLeft="@dimen/activity_horizontal_margin"
             android:layout_marginRight="@dimen/activity_horizontal_margin"
             android:layout_marginBottom="@dimen/activity_vertical_margin"
-            android:background="#EFEEEE">
+            android:background="#FFCBBB">
 
             <TableRow
                 android:layout_width="match_parent"
@@ -97,20 +87,15 @@
                 android:layout_marginBottom="8dp">
 
                 <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="@dimen/activity_vertical_margin"
+                    style="@style/TextSpec.Field"
                     android:fontFamily="@font/comfortaa"
                     android:text="@string/display"
                     android:textSize="14sp" />
 
                 <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
+                    style="@style/TextSpec.Value"
                     android:fontFamily="@font/comfortaa"
                     android:text="@string/content_specs_display"
-                    android:textColor="@android:color/black"
                     android:textSize="14sp" />
             </TableRow>
 
@@ -120,20 +105,15 @@
                 android:layout_marginBottom="8dp">
 
                 <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="@dimen/activity_vertical_margin"
+                    style="@style/TextSpec.Field"
                     android:fontFamily="@font/comfortaa"
                     android:text="@string/size"
                     android:textSize="14sp" />
 
                 <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
+                    style="@style/TextSpec.Value"
                     android:fontFamily="@font/comfortaa"
                     android:text="@string/content_specs_size"
-                    android:textColor="@android:color/black"
                     android:textSize="14sp" />
             </TableRow>
 
@@ -143,33 +123,24 @@
                 android:layout_marginBottom="8dp">
 
                 <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="@dimen/activity_vertical_margin"
+                    style="@style/TextSpec.Field"
                     android:fontFamily="@font/comfortaa"
                     android:text="@string/battery"
                     android:textSize="14sp" />
 
                 <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
+                    style="@style/TextSpec.Value"
                     android:fontFamily="@font/comfortaa"
                     android:text="@string/content_specs_battery"
-                    android:textColor="@android:color/black"
                     android:textSize="14sp" />
             </TableRow>
         </TableLayout>
 
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/activity_horizontal_margin"
-            android:layout_marginRight="@dimen/activity_horizontal_margin"
+            style="@style/TextContent.Subtitle"
             android:layout_marginBottom="8dp"
             android:fontFamily="@font/comfortaa"
             android:text="@string/seller"
-            android:textColor="#000000"
             android:textSize="14sp"
             android:textStyle="bold" />
 
@@ -189,21 +160,17 @@
                 android:src="@drawable/photo_2" />
 
             <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                style="@style/TextContent"
                 android:layout_centerVertical="true"
                 android:layout_toEndOf="@id/profile_image"
+                android:layout_toRightOf="@id/profile_image"
                 android:fontFamily="@font/comfortaa"
                 android:text="@string/my_name"
                 android:textColor="@android:color/black" />
         </RelativeLayout>
 
         <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/activity_horizontal_margin"
-            android:layout_marginRight="@dimen/activity_horizontal_margin"
-            android:layout_marginBottom="@dimen/activity_vertical_margin"
+            style="@style/ButtonGeneral"
             android:background="#FF6E40"
             android:fontFamily="@font/bungee"
             android:text="@string/buy"
