--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#E8824F</color>
-    <color name="colorPrimaryDark">#F2A870</color>
+    <color name="colorPrimary">#F2A870</color>
+    <color name="colorPrimaryDark">#E8824F</color>
     <color name="colorAccent">#FF5722</color>
     <color name="colorSubTitle">#757575</color>
 </resources>
